--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,8 @@
     "mercadopago": "^1.5.15",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.1",
+    "pg": "^8.10.0",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.31.0"
   }
 }
