--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "image-size": "^1.0.2",
     "joi": "^17.9.1",
     "mercadopago": "^1.5.15",
     "morgan": "^1.10.0",
