Se valida la url de la imagen

--- a/api/package.json
+++ b/api/package.json
@@ -20,7 +20,9 @@
     "nodemailer": "^6.9.1",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
+    "request-promise-native": "^1.0.9",
     "sequelize": "^6.31.0",
+    "sharp": "^0.32.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.2"
   },
