--- a/api/package.json
+++ b/api/package.json
@@ -11,13 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "image-size": "^1.0.2",
     "joi": "^17.9.1",
+    "jsonwebtoken": "^9.0.0",
     "mercadopago": "^1.5.15",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.1",
+    "passport": "^0.6.0",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
     "request-promise-native": "^1.0.9",
