--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
+    "passport-google-oidc": "^0.1.0",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
     "request-promise-native": "^1.0.9",
