--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,9 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mercadopago/sdk-react": "^0.0.8",
-    "mercadopago": "^1.5.15",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.1",
+    "@mui/x-date-pickers": "^6.3.0",
     "@tanstack/react-query": "^4.29.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -18,6 +18,7 @@
     "antd": "^5.4.6",
     "axios": "^1.3.6",
     "dotenv": "^16.0.3",
+    "mercadopago": "^1.5.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
