Se agregaron validaciones y se vinculó con el back el login

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "cSpell.words": ["antd", "Loleros", "sweetalert", "swipeable", "tanstack"]
+  "cSpell.words": [
+    "antd",
+    "formik",
+    "Formik",
+    "Loleros",
+    "sweetalert",
+    "swipeable",
+    "tanstack"
+  ]
 }
