--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "antd": "^5.4.6",
     "axios": "^1.3.6",
     "dotenv": "^16.0.3",
+    "formik": "^2.2.9",
     "mercadopago": "^1.5.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -29,7 +30,8 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.10",
     "sweetalert2": "^11.7.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
