--- a/api/package.json
+++ b/api/package.json
@@ -22,7 +22,7 @@
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
-    "passport-google-oidc": "^0.1.0",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
     "request-promise-native": "^1.0.9",
