--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.4.6",
     "axios": "^1.3.6",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "formik": "^2.2.9",
     "mercadopago": "^1.5.15",
