--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
     "mercadopago": "^1.5.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
